--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>{{ post.title }}</title>
+        <title>Weiya</title>
     </head>
     <body>
           {{ page.title }}
