--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,7 +10,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     {% endif %}
     {% if page.syntax_highlight != false %}
-    <link rel="stylesheet" href="{{ site.assets }}/css/tomorrow-night-eighties.css">
+    <link rel="stylesheet" href="{{ site.assets }}/css/??.css">
     <link rel="stylesheet" href="https://code.cdn.mozilla.net/fonts/fira.css">
     {% endif %}
     {% if page.jquery == true %}
