--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,20 +1,12 @@
-  <head>
+<head>
     <meta charset="UTF-8">
     <meta name="description" content="{{ site.description }}"/>
-    <title>{{ page.title }} | {{ site.title }}</title>
+    <title>{{ page.title }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="canonical" href="{{ site.url }}{{ page.permalink }}">
-    <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="/images/01.JPG">
-    {% if page.font_awesome != false %}
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    {% endif %}
-    {% if page.syntax_highlight != false %}
-    <link rel="stylesheet" href="{{ site.assets }}/css/??.css">
-    <link rel="stylesheet" href="https://code.cdn.mozilla.net/fonts/fira.css">
-    {% endif %}
-    {% if page.jquery == true %}
-    <script src="{{ site.assets }}/scripts/jquery-3.1.0.min.js"></script>
-    {% endif %}
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ site.assets }}/css/style.css">
-  </head>
+    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+</head>
