--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,15 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-    {% include head.html %}
+    <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+    
+    <title>{{ page.title }}</title>
+    <link rel="icon" type="image/x-icon" href="/images/01.JPG">
+    <link rel="stylesheet" href="{{ site.assets }}/css/style.css">
+    
+    </head>
     <body>
-          <div class="content" id="header">
-          {% include header.html %}
-          </div>
+        <nav class="nav flex-column">
+          <a class="nav-link active" href="https://yinkouya.github.io/">Blog</a>
+          <a class="nav-link" href="/README.md">About me</a>
+          <a class="nav-link disabled" href="#">Moments</a>
+        </nav>
           <div class="content" id="main-content">
               <div class="content-wrapper">
               {{ content }}
               </div>
           </div>
-          {% include footer.html %}
+         
     </body>
 </html>
