--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,7 +48,7 @@
         </div>
         <footer>
           <p>
-            @copy; Weiya 2017 May
+            @weiya&hearts;  starting from 2017 May
           </p>
         </footer>
       </div>
