--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,7 @@
     </title>
     <link rel="icon" type="image/x-icon" href="/img/Raw_egg.jpg">
     <link rel="stylesheet" href="assets/style.css">
+    <script type="text/javascript" src="assets/main.js"></script>
     
     </head>
     <body>
