--- a/assets/style.css
+++ b/assets/style.css
@@ -9,6 +9,9 @@ section p {
 .carousel.slide {
   width: 650px;
   height: 650px;
+  position:absolute;
+  left:100px;
+  top:150px
 }
 
 .carousel-inner > .carousel-item > img {
