--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,7 +49,7 @@
         </div>
         <footer>
           <p>
-            @weiya&hearts;  starting from 2017 May
+            &hearts; from May, 2017
           </p>
         </footer>
       </div>
