--- a/assets/style.css
+++ b/assets/style.css
@@ -1,17 +1,25 @@
 .container.post {
-  margin: 25px;
+  margin: 30px;
 }
 
 .carousel.slide {
   width: 650px;
   height: 650px;
   position: absolute;
-  left: 280px;
-  top: 15px;
+  left: 270px;
+  top: 10px;
 }
 
 .carousel-inner > .carousel-item > img {
   margin: 0 auto;
   width: 600px;
   height: 600px;
+}
+
+footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 100px;
+  background-color: #ffc0cb;
 }
