--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,17 +4,17 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-    
+
     <title>
       {% if page.title %} {{ page.title }} | {% endif %} Weiya
     </title>
     <link rel="icon" type="image/x-icon" href="/img/Raw_egg.jpg">
     <link rel="stylesheet" href="assets/style.css">
     <script type="text/javascript" src="assets/main.js"></script>
-    
+
     </head>
     <body>
       <div class="container">
@@ -44,17 +44,18 @@
             </form>
           </div>
         </nav>
-        <div class="container">
+        <div class="container wrapper">
           {{ content }}
+          <div class="push"></div>
         </div>
-        <footer>
+        <div class="footer">
           <p>
             &hearts; from May, 2017
           </p>
-        </footer>
+        </div>
       </div>
     </body>
-        
+
      <!-- jQuery first, then Tether, then Bootstrap JS. -->
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
