--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,11 @@
+* {
+    margin: 0;
+}
+
+html, body {
+    height: 100%;
+}
+
 .container.post {
   margin: 30px;
 }
@@ -24,4 +32,14 @@ footer {
   position: absolute;
   bottom: 0;
   width: 100%;
+}
+
+.wrapper {
+    min-height: 100%;
+    height: auto !important;
+    height: 100%;
+    margin: 0 auto -142px; /* the bottom margin is the negative value of the footer's height */
+}
+.footer .push {
+    height: 142px; /* .push must be the same height as .footer */
 }
