--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,17 +5,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css"/>
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css"/>
-
+    <link rel="stylesheet" type="text/css" href="assets/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="assets/slick-theme.css"/>
+    <link rel="stylesheet" href="assets/style.css">
     <title>
       {% if page.title %} {{ page.title }} | {% endif %} Weiya
     </title>
     <link rel="icon" type="image/x-icon" href="/img/Raw_egg.jpg">
-    <link rel="stylesheet" href="assets/style.css">
-    
-
     </head>
+    
     <body>
       <div class="container">
         <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
@@ -44,16 +42,21 @@
             </form>
           </div>
         </nav>
-        <div class="container wrapper">
+        <div class="container">
           {{ content }}
         </div>
+        <footer>
+            <p>
+                &hearts; May 2017
+            </p>
+        </footer>
       </div>
     
      <!-- jQuery first, then Tether, then Bootstrap JS. -->
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.js"></script>
+    <script type="text/javascript" src="assets/slick.min.js"></script>
     <script type="text/javascript" src="assets/main.js"></script>
   </body>
 </html>
