--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,6 +43,20 @@
           </div>
         </nav>
         <div class="container">
+            <div class="slickcarousel">
+                <div>
+                    <img class="d-block img-fluid" src="img/yellowpillow01.jpg" alt="First slide">
+                </div>
+                <div>
+                    <img class="d-block img-fluid" src="img/yellowpillow02.jpg" alt="Second slide">
+                </div>
+                <div>
+                    <img class="d-block img-fluid" src="img/yellowpillow03.jpg" alt="Third slide">
+                </div>
+                <div>
+                    <img class="d-block img-fluid" src="img/yellow_dots.jpg" alt="Fourth slide">
+                </div>
+            </div>
           {{ content }}
         </div>
         <footer>
