--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,7 +43,7 @@
           </div>
         </nav>
         <div class="container">
-            <div class="slickcarousel">
+            <div class="demo">
                 <div>
                     <img class="d-block img-fluid" src="img/yellowpillow01.jpg" alt="First slide">
                 </div>
