--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,16 +45,16 @@
         <div class="container">
             <div class="demo">
                 <div>
-                    <img class="d-block img-fluid" src="img/yellowpillow01.jpg" alt="First slide">
+                    <img class="img-responsive" src="img/yellowpillow01.jpg" alt="First slide">
                 </div>
                 <div>
-                    <img class="d-block img-fluid" src="img/yellowpillow02.jpg" alt="Second slide">
+                    <img class="img-responsive" src="img/yellowpillow02.jpg" alt="Second slide">
                 </div>
                 <div>
-                    <img class="d-block img-fluid" src="img/yellowpillow03.jpg" alt="Third slide">
+                    <img class="img-responsive" src="img/yellowpillow03.jpg" alt="Third slide">
                 </div>
                 <div>
-                    <img class="d-block img-fluid" src="img/yellow_dots.jpg" alt="Fourth slide">
+                    <img class="img-responsive" src="img/yellow_dots.jpg" alt="Fourth slide">
                 </div>
             </div>
           {{ content }}
