--- a/assets/style.css
+++ b/assets/style.css
@@ -23,9 +23,10 @@ img {
     color: yellow;
 }
 
-.button{
-    margin:0 auto 20px;
-    width:auto;
+.slick-dots li button
+{
+    color: transparent;
+    border: 0;
+    outline: none;
+    background: yellow;
 }
-
-
