--- a/assets/style.css
+++ b/assets/style.css
@@ -23,10 +23,7 @@ img {
     color: yellow;
 }
 
-.slick-dots li button
-{
+.slick-dots li button {
     color: transparent;
-    border: 0;
-    outline: none;
     background: yellow;
 }
