--- a/assets/style.css
+++ b/assets/style.css
@@ -20,9 +20,8 @@ img {
   margin: auto;
 }
 
-.slick-prev:before,
-.slick-next:before {
-  color: yellow !important;
+.button {
+    color: yellow;
 }
 
 
