--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,16 +8,16 @@
     <link rel="stylesheet" type="text/css" href="assets/slick.css"/>
     <link rel="stylesheet" type="text/css" href="assets/slick-theme.css"/>
     <link rel="stylesheet" href="assets/style.css">
+    <link rel="icon" type="image/x-icon" href="/img/Raw_egg.jpg">
     <title>
       {% if page.title %} {{ page.title }} | {% endif %} Weiya
     </title>
-    <link rel="icon" type="image/x-icon" href="/img/Raw_egg.jpg">
     </head>
     
     <body>
       <div class="container">
         <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
-        <a class="navbar-brand" href="#">Weiya</a>
+        <a class="navbar-brand" href="https://yinkouya.github.io/">Weiya</a> <!--want it to be a pic-->
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
               <li class="nav-item active">
