--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,10 +45,12 @@
         <div class="container">
           {{ content }}
         </div>
-        <footer>
-            <p>
-                &hearts; May 2017
-            </p>
+        <footer class="footer">
+	      <p class="copyright">
+	    	<small>
+	            <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/cn/" target="_blank" title="许可协议">©</a> 2017 May &nbsp;&nbsp;&nbsp;&nbsp;<a href="README.md">{{site.author.name}}</a>
+	        </small>
+	      </p>
         </footer>
       </div>
     
