--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
               <a class="nav-link" href="#">Book<span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Movie</a>
+                <a class="nav-link" href="category/jekyll/index.html">Movie</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Music</a>
