--- a/_layouts/github_category_index.html
+++ b/_layouts/github_category_index.html
@@ -6,23 +6,23 @@ layout: default
   {% for post in site.categories[page.category] %}
   <article class="post-preview">
     <a href="{{ post.url | prepend: site.baseurl }}">
-      <h2 class="post-title">{{ post.title }}</h2>
+      <h3 class="post-title">{{ post.title }}</h3>
     
       {% if post.subtitle %}
-      <h3 class="post-subtitle">
+      <h4 class="post-subtitle">
         {{ post.subtitle }}
-      </h3>
+      </h4>
       {% endif %}  
     </a>
 
     <p class="post-meta">
-      <!-- Posted on {{ post.date | date: "%B %-d, %Y" }} -->
-      Posted on {{ post.date | date: "%Y-%m-%d" }}
+      Posted on {{ post.date | date: "%B %-d, %Y" }}
     </p>
   
     <div class="post-entry">
-      {{ post.content | truncatewords: 20 | strip_html | xml_escape}}
+      {{ post.content | truncatewords: 30 | strip_html | xml_escape}}
       <a href="{{ post.url | prepend: site.baseurl }}" class="post-read-more">[Read&nbsp;More]</a>
+      <br/>
     </div>
   
    </article>
