--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,13 +21,10 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
               <li class="nav-item active">
-              <a class="nav-link" href="#">Book<span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="#">Code<span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="category/jekyll/index.html">Movie</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Music</a>
+                <a class="nav-link" href="category/jekyll/index.html">Life</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="README.md">About</a>
