--- a/_layouts/github_category_index.html
+++ b/_layouts/github_category_index.html
@@ -22,8 +22,9 @@ layout: default
     <div class="post-entry">
       {{ post.content | truncatewords: 30 | strip_html | xml_escape}}
       <a href="{{ post.url | prepend: site.baseurl }}" class="post-read-more">[Read&nbsp;More]</a>
-      <br />
     </div>
+    <div>
+    </div>  
   
    </article>
   {% endfor %}
