--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
     <body>
       <div class="container">
         <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
-        <a class="navbar-brand" href="https://yinkouya.github.io/">Weiya</a> <!--want it to be a pic-->
+        <a class="navbar-brand" href="https://yinkouya.github.io/"><img src="img/name.png" alt="name" height="15px" width="15px"> </a>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
               <li class="nav-item active">
@@ -28,9 +28,6 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="README.md">About</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link disabled" href="#">Moments</a>
               </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
