--- a/assets/style.css
+++ b/assets/style.css
@@ -19,7 +19,7 @@ ul.post li{
   padding: 0;
 }
 
-img { 
+div img {
   width: 50%;
   margin: auto;
 }
@@ -29,3 +29,9 @@ img {
   color: yellow;
 }
 
+a.navbar-brand {
+  height: 48;
+  width: 64;
+  display: inline-block;
+  padding: 1px 0;
+}
