--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
     <body>
       <div class="container">
         <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
-        <a class="navbar-brand" href="https://yinkouya.github.io/"><img src="img/name.png" alt="name" height="48" width="64"> </a>
+        <a class="navbar-brand" href="https://yinkouya.github.io/"><img src="img/name.png" alt="name" height="48" width="64" border="0"> </a>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
               <li class="nav-item active">
