--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,24 +17,27 @@
     <body>
       <div class="container">
         <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
-        <a class="navbar-brand" href="https://yinkouya.github.io/"><img src="img/name.png" alt="name" height="48" width="64" border="0"> </a>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-              <li class="nav-item active">
-              <a class="nav-link" href="#">Code<span class="sr-only">(current)</span></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="category/jekyll/index.html">Life</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="README.md">About</a>
-              </li>
-            </ul>
-            <form class="form-inline my-2 my-lg-0">
-              <input class="form-control mr-sm-2" type="text" placeholder="Hello World">
-              <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
-          </div>
+            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <a class="navbar-brand" href="https://yinkouya.github.io/"><img src="img/name.png" alt="name" height="48" width="64" border="0"> </a>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                <a class="nav-link" href="#">Code<span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="category/jekyll/index.html">Life</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="README.md">About</a>
+                </li>
+              </ul>
+              <form class="form-inline my-2 my-lg-0">
+                <input class="form-control mr-sm-2" type="text" placeholder="Hello World">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+              </form>
+            </div>
         </nav>
         <div class="container">
           {{ content }}
