--- a/_layouts/github_category_index.html
+++ b/_layouts/github_category_index.html
@@ -3,29 +3,33 @@ layout: default
 ---
 
 <div class="posts-list">
+  <ul class="post-list">
   {% for post in site.categories[page.category] %}
-  <article class="post-preview">
-    <a href="{{ post.url | prepend: site.baseurl }}">
-      <h4 class="post-title">{{ post.title }}</h4>
-    
-      {% if post.subtitle %}
-      <h5 class="post-subtitle">
-        {{ post.subtitle }}
-      </h5>
-      {% endif %}  
-    </a>
+  <li>
+    <article class="post-preview">
+      <a href="{{ post.url | prepend: site.baseurl }}">
+        <h4 class="post-title">{{ post.title }}</h4>
 
-    <p class="post-meta">
-      Posted on {{ post.date | date: "%B %-d, %Y" }}
-    </p>
-  
-    <div class="post-entry">
-      {{ post.content | truncatewords: 30 | strip_html | xml_escape}}
-      <a href="{{ post.url | prepend: site.baseurl }}" class="post-read-more">[Read&nbsp;More]</a>
-    </div>
-    <div>
-    </div>  
-  
-   </article>
+        {% if post.subtitle %}
+        <h5 class="post-subtitle">
+          {{ post.subtitle }}
+        </h5>
+        {% endif %}  
+      </a>
+
+      <p class="post-meta">
+        Posted on {{ post.date | date: "%B %-d, %Y" }}
+      </p>
+
+      <div class="post-entry">
+        {{ post.content | truncatewords: 30 | strip_html | xml_escape}}
+        <a href="{{ post.url | prepend: site.baseurl }}" class="post-read-more">[Read&nbsp;More]</a>
+      </div>
+      <div>
+      </div>  
+
+     </article>
+    </li>
   {% endfor %}
+  </ul>
 </div>
