--- a/assets/style.css
+++ b/assets/style.css
@@ -20,9 +20,9 @@ ul.post li{
 }
 
 div.tocarousel>img {
+  display: block;
+  margin: 0 auto;
   width: 50%;
-  margin: auto;
-  text-align: center;
 }
 
 .slick-prev:before,
