--- a/assets/style.css
+++ b/assets/style.css
@@ -30,13 +30,7 @@ div.tocarousel>img {
   color: yellow;
 }
 
-a.navbar-brand {
-  height: 48;
-  width: 64;
-  display: inline-block;
-  padding: 1px 0;
-}
-
 a.navbar-brnad > img {
   width: initial;
+  height: 53px;
 }
