--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
                   <a class="nav-link" href="category/jekyll/index.html">Life</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="README.md">About</a>
+                  <a class="nav-link" href="_layouts/about.html">About</a>
                 </li>
               </ul>
               <form class="form-inline my-2 my-lg-0">
