--- a/assets/style.css
+++ b/assets/style.css
@@ -12,7 +12,7 @@ footer {
 }
 
 .container.post {
-  margin: 30px;
+  margin: 30;
 }
 
 ul.post li{
@@ -20,14 +20,14 @@ ul.post li{
 }
 
 .navbar-brand > img {
-  height: 30px;
-  width: 30px;
+  height: 30;
+  width: 30;
 }
 
 .carousel-inner > .carousel-item > img {
   margin: 0 auto;
 }
 
-.warp {
-  margin: 5 0;
+.wrap {
+  margin: 5 auto;
 }
