--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,8 +5,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="assets/slick.css"/>
-    <link rel="stylesheet" type="text/css" href="assets/slick-theme.css"/>
     <link rel="stylesheet" href="assets/style.css">
     <link rel="icon" type="image/x-icon" href="/img/Raw_egg.jpg">
     <title>
@@ -28,7 +26,7 @@
                 <a class="nav-link" href="#">Code<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="category/jekyll/index.html">Life</a>
+                  <a class="nav-link" href="category/life/index.html">Life</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="about.html">About</a>
