--- a/assets/style.css
+++ b/assets/style.css
@@ -7,12 +7,15 @@
   margin: 0 auto;
 }
 
-nav {
+.nav-container span {
   display: block;
-  margin-bottom：10px;
 }
 
-.wrap {
+.nav-container a {
+  display: block;
+}
+
+.nav-container {
   position: relative;
   margin-bottom：10px;
 }
