--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
                   <a class="nav-link" href="category/life/index.html">Life</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="about.html">About</a>
+                  <a class="nav-link" href="aboutme.html">About</a>
                 </li>
               </ul>
               <form class="form-inline my-2 my-lg-0">
