--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,10 +26,10 @@
                 <a class="nav-link" href="#">Code<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="category/life/index.html">Life</a>
+                  <a class="nav-link" href="{{'category/life/index.html' | absolute_url }}">Life</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="aboutme.html">About</a>
+                  <a class="nav-link" href="{{'aboutme.html'|absolute_url}}">About</a>
                 </li>
               </ul>
               <form class="form-inline my-2 my-lg-0">
