--- a/_layouts/category_index.html
+++ b/_layouts/category_index.html
@@ -11,15 +11,10 @@ layout: default
         <h6 class="post-title">{{ post.title }}</h6>
       </a>
       <p class="post-meta">
-        Posted on {{ post.date | date: "%B %-d, %Y" }}
+        {{ post.date | date: "%B %-d, %Y" }}
       </p>
-
-      <div class="post-entry">
-        {{ post.content | truncatewords: 30 | strip_html | xml_escape}}
-        <a href="{{ post.url | prepend: site.baseurl }}" class="post-read-more">[Read&nbsp;More]</a>
-      </div>
-     </article>
-    </li>
+    </article>
+  </li>
   {% endfor %}
   </ul>
 </div>
