--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -1,7 +1,18 @@
 ---
 layout: default
 ---
-<h3>Weiya Yin is a boring person</h3>
-<p>I'm a Web Design amateur, I write stuff here to record my life, which is quite ordinary.
-Contact me if you like my pic.
-</p>
+<div class="container">
+  <div class="row">
+    <div class="col-6">
+      <h3>Work in progress</h3>
+      <p>I'm a wanna-be web designer, I write stuff here to record my life.</p>
+      <p>I spend over 5 minute when brushing teeth -- My 4 wisdom teeth (2 pulled out) are no fun.</p>
+      <p>Philosophy is fascinating, I have so many questions about life.</p>
+      <p>At times I struggle with my anxieties and insecurites.</p>
+      <p><i>Only by working continuously.</i></p>
+    </div>
+    <div class="col-6">
+      <img class="about" src="img/yellow-sateen.jpg" alt="yellow">
+    </div>
+  </div>
+</div>
