--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,13 +23,13 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                <a class="nav-link" href="#">Code<span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="{{'category/code/index.html' | absolute_url }}">Code<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="{{'category/life/index.html' | absolute_url }}">Life</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="{{'aboutme.html'|absolute_url}}">About</a>
+                  <a class="nav-link" href="{{'_layouts/about.html'|absolute_url}}">About</a>
                 </li>
               </ul>
               <form class="form-inline my-2 my-lg-0">
