--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/style.css">
-    <link rel="icon" type="image/x-icon" href="/img/Raw_egg.jpg">
+    <link rel="icon" type="image/x-icon" href="{{ site.url }}/img/Raw_egg.jpg">
     <title>
       {% if page.title %} {{ page.title }} | {% endif %} Weiya
     </title>
@@ -19,7 +19,7 @@
                   <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
-                  <a class="navbar-brand" href="https://yinkouya.github.io/"><img src="img/Pillow.png" alt="pillow"></a>
+                  <a class="navbar-brand" href="https://yinkouya.github.io/"><img src="{{ site.url }}/img/Pillow.png" alt="pillow"></a>
                   <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto">
                       <li class="nav-item active">
