--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/style.css">
-    <link rel="icon" type="image/x-icon" href="{{ site.url }}/img/Raw_egg.jpg">
+    <link rel="icon" type="image/x-icon" href="img/Raw_egg.jpg">
     <title>
       {% if page.title %} {{ page.title }} | {% endif %} Weiya
     </title>
