--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,7 +46,7 @@
           <p class="copyright">
             &copy;
             <span itemprop="copyrightYear">May 2017</span>
-            <span itemprop="name">&nbsp;<a href="https://github.com/yinkouya"><img class="footer" src="/img/github.jpg" alt="github"></a> </span>
+            <span itemprop="name"><a href="https://github.com/yinkouya"><img class="footer" src="/img/github.jpg" alt="github"></a> </span>
           </p>
         </footer>
       </div>
