--- a/assets/style.css
+++ b/assets/style.css
@@ -33,3 +33,9 @@ img.footer {
   padding-top: 4em;
   font-size: 0.9em;
 }
+
+.post-index .container {
+  overflow: hidden;
+  max-width: $page-width;
+  margin: 0 auto;
+}
