--- a/assets/style.css
+++ b/assets/style.css
@@ -80,3 +80,9 @@ a:active  {color:yellow;}
   margin-right: 3px;
   transition: all 100ms linear;
 }
+
+.nav-container {
+  margin: 0em auto 2em auto;
+  position: relative;
+  padding-top: 2em;
+}
