--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
     <body>
       <div class="container">
         <div class="nav-container">
-              <nav class="navbar navbar-toggleable-md navbar-light" style="background-color: #FFFFE0;">
+              <nav class="navbar navbar-toggleable-md navbar-light" style="background-color: #228B22;">
                   <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
