--- a/assets/style.css
+++ b/assets/style.css
@@ -11,7 +11,7 @@ img.brand {
   position: relative;
   border-style: none none solid none;
   border-bottom-width： thin;
-  border-color: #000000;
+  border-bottom-color: #8B5A00;
 }
 
 img.about {
