--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400" rel="stylesheet">
     <link rel="shortcut icon" href="favicon.ico">
     <title>
-      {% if page.title %} {{ page.title }} | {% endif %} Weiya
+      {% if page.title %} {{ page.title }} | {% endif %} Kouya
     </title>
     </head>
     
@@ -21,6 +21,9 @@
                     <span class="navbar-toggler-icon"></span>
                   </button>
                   <a class="navbar-brand" href="https://yinkouya.github.io/"><img class="brand" src="{{ site.url }}/img/yellow-pillow.jpg" alt="pillow"></a>
+                  <span class="navbar-text">
+                    Kou Yaa
+                  </span>
                   <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto">
                       <li class="nav-item active">
