--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400" rel="stylesheet">
     <link rel="shortcut icon" href="favicon.ico">
     <title>
-      {% if page.title %} {{ page.title }} | {% endif %} Kouya
+      {% if page.title %} {{ page.title }} | {% endif %} Kouyaa
     </title>
     </head>
     
