--- a/_layouts/category_index.html
+++ b/_layouts/category_index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-
+<div class="main">
 {% if site.posts %}
 <div class='post-index' id='toc'>
   <div class='container'>
@@ -16,3 +16,4 @@ layout: default
   </div>
 </div>
 {% endif %}
+</div>
