--- a/assets/style.css
+++ b/assets/style.css
@@ -87,20 +87,10 @@ a:active  {color:yellow;}
   font-size: 0.8em;
 }
 
-.date, .tag {
+.date {
   margin-top: 0.2em;
 }
 
 .date, .article {
   float: left;  
-}
-
-.tag {
-  float: right;
-}
-
-.article {
-  color: $text;
-  margin-right: 3px;
-  transition: all 100ms linear;
 }
