--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<article class="text-center" role="main">
+<article role="main">
     <header>
       <a href="{{ site.baseurl }}/" id="home_link"><i class="fa fa-caret-left fa-fw" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;</a>
       <span class="article-date">{{ page.date | date:"%B %d, %Y" }}</span>
