--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,7 +44,7 @@
           {{ content }}
         </div>
 
-        <footer class="footer">
+        <footer class="footer text-center">
           <div class="container">
             <span class="text-muted">&copy;May 2017<a href="https://github.com/yinkouya"><i class="fa fa-github" aria-hidden="true"></i></a></span>
           </div>
