--- a/assets/style.css
+++ b/assets/style.css
@@ -1,10 +1,14 @@
-html {font-size: 1em;}
+html {
+  position: relative;
+  min-height: 100%;
+  font-size: 1em;}
 
 body {
   font-family: 'Lato', sans-serif;
   font-weight: 400;
   line-height: 1.45;
   color: #333;
+  margin-bottom: 30px;
 }
 
 p {margin-bottom: 1.3em;}
@@ -31,7 +35,7 @@ h4 {font-size: 1.25em;}
     width: 100%;
     height: 30px;
     line-height: 30px;
-    background-color: #f5f5f5;
+    background-color: lavenderblush;
 }
 
 
