--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,7 +46,7 @@
 
         <footer class="footer text-center">
           <div class="container">
-            <span class="text-muted">&copy;May 2017<a href="https://github.com/yinkouya"><i class="fa fa-github" aria-hidden="true"></i></a></span>
+            <span class="text-muted">May 2017&nbsp;<a href="https://github.com/yinkouya"><i class="fa fa-github" aria-hidden="true"></i></a></span>
           </div>
         </footer>
       </div>
