--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,8 +3,8 @@ layout: default
 ---
 <article role="main">
     <header>
-      <i class="fa fa-heartbeat" aria-hidden="true"></i>
-      <span class="article-date">{{ page.date | date:"%B %d, %Y" }}</span>
+      <i class="fa fa-unlock" aria-hidden="true"></i>
+      <span class="article-date">&nbsp;{{ page.date | date:"%B %d, %Y" }}</span>
       <h1>{{ page.title }}</h1>
     </header>
 
