--- a/assets/style.css
+++ b/assets/style.css
@@ -111,7 +111,7 @@ img.brand {
 
 article {
   width: 700px;
-  margin: 0 auto -50 auto;
+  margin: 0 auto -50px auto;
 }
 
 article a { color: #ff9900; background: #fff4a3; text-decoration: none; }
