--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,8 @@
+*{
+  padding: 0;
+  margin: 0;
+}
+
 html {
   height: 100%;
   font-size: 1em;}
@@ -8,8 +13,22 @@ body {
   line-height: 1.45;
   color: #333;
   height: 100%;
-  margin: 0;
-  padding: 0;
+}
+
+.page-wrap {
+  /* 页面内容撑满100%的屏幕 */
+  min-height: 100%;
+  /* 负边距大小即为页脚高度 */
+  margin-bottom: -60px; 
+}
+/* 用来填充被页脚遮挡部分 */
+.page-wrap:after {
+  content: "";
+  display: block;
+}
+/* 填充块和页脚一样高 */
+.site-footer, .page-wrap:after {
+  height: 60px; 
 }
 
 p {margin-bottom: 1.3em;}
