--- a/assets/style.css
+++ b/assets/style.css
@@ -30,7 +30,7 @@ img.brand {
   width: 70px;
 }
 
-.nav-container {
+.container {
   margin: 0em auto 2em auto;
   position: relative;
   border-style: none none solid none;
