--- a/assets/style.css
+++ b/assets/style.css
@@ -52,6 +52,11 @@ img.brand {
   margin: 0 auto;
 }
 
+#carousel-item {
+  width: 1170px;
+  margin: 0 auto;
+}
+
 .carousel-item > img {
   margin: 0 auto;
 }
