--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,7 +40,7 @@
           </div>
       </nav>
     </div>
-    <div class="main">
+    <div class="container">
       {{ content }}
     </div>
 
