--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,10 +1,10 @@
 ---
 layout: default
 ---
-<article class="main">
+<article>
   <header>
     <i class="fa fa-unlock" aria-hidden="true"></i>
-    <span class="article-date">&nbsp;{{ page.date | date:"%B %d, %Y" }}</span>
+    <span class="article-date">&nbsp;{{ page.date | date:"%B %d, %Y" }}</span><br>
     <h1>{{ page.title }}</h1>
   </header>
   <p>
