--- a/assets/style.css
+++ b/assets/style.css
@@ -42,7 +42,7 @@ img.brand {
 }
 
 article {
-  background: #E08283; /* New York Pink*/
+  background: #FFDAB9; /* Peachpuff*/
   width: 700px;
   margin: 0 auto;
 }
